fix color selector clipping out

--- a/frontend/src/app/home/components/color-selector/color-selector.component.scss
+++ b/frontend/src/app/home/components/color-selector/color-selector.component.scss
@@ -5,6 +5,7 @@
   position: relative;
   z-index: 50;
   box-sizing: border-box;
+  overflow-y: auto;
 }
 
 .color-label {
